--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,6 +23,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --upgrade setuptools
+    - name: install depencencies
+    - run: sudo apt-get install valac libgee-0.8-dev diodon-dev
     - run: echo "🍏 This job's status is ${{ job.status }}."
     - name: config
       run: ./waf configure --libdir /usr/lib/x86_64-linux-gnu/
